--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 
     </head>
     <body>
-        <h1 style="color:green;">ICICI Bank</h1>
+        <h1 style="color:yellow;">ICICI Bank</h1>
     </body>
 </html>
